--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     Tarea 1.1 - Diseño digital 
 
-    <script src="./ejercicio1.js"></script>
+    <!-- <script src="./ejercicio1.js"></script> -->
+    <script src="./ejercicio2.js"></script>
 </body>
 </html>
