--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     Tarea 1.1 - Diseño digital 
 
     <!-- <script src="./ejercicio1.js"></script> -->
-    <script src="./ejercicio2.js"></script>
+    <!-- <script src="./ejercicio2.js"></script> -->
+    <script src="./ejercicio3.js"></script>
 </body>
 </html>
