--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./ejercicio1.js"></script> -->
     <!-- <script src="./ejercicio2.js"></script> -->
     <!-- <script src="./ejercicio3.js"></script> -->
-    <script src="./ejercicio4.js"></script>
+    <!-- <script src="./ejercicio4.js"></script> -->
+    <script src="./ejercicio5.js"></script>
 </body>
 </html>
